# poo

./: CMakeLists.txt  Equation.cpp  Equation.h  Problem.cpp  Problem.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Variable.cpp  Variable.h  a.out  build.sh  main.cpp  result_ana.txt  test.cpp
inc/: Equation.h  Problem.h  Time.h  Variable.h
src/: CMakeLists.txt  Equation.cpp  Problem.cpp  Time.cpp  Timer.cpp  Variable.cpp  main.cpp  test.cpp
test/: CMakeLists.txt  test_discretization.cpp  test_thread.cpp  test_variable.cpp
